# crabnet

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_cn.md  SECURITY.md
docs/: ARCHITECTURE.md  ROADMAP.md
docs/use-cases/: crabnet-for-psbt-marketplace-part-1.md  crabnet-for-psbt-marketplace-part-2.md
src/: lib.rs  main.rs  model.rs  monitor.rs  network.rs  runner.rs  store.rs  web.rs
tests/: cli_alignment.rs  cli_e2e.rs  e2e.rs  runner_hardening.rs
web/: index.html
web/app/: index.html  package-lock.json  package.json
web/app/src/: App.jsx  main.jsx  styles.css
web/app/src/components/ui/: badge.jsx  button.jsx  card.jsx  input.jsx  table.jsx
