[package]
name = "crabnet-mvp"
version = "0.1.0"
edition = "2021"

[features]
default = []
dht = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
x25519-dalek-ng = "1.1.1"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
rand = "0.8"
libp2p = { version = "0.53", features = ["tokio", "noise", "tcp", "yamux", "macros", "gossipsub", "mdns", "kad", "identify", "ping", "dns"] }
tokio = { version = "1.39", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
axum = "0.8.4"
tower-http = { version = "0.6", features = ["fs"] }
ed25519-dalek = { version = "2.2.0", default-features = false }
pqcrypto-dilithium = { version = "0.5.0", default-features = false }
